# genai-basics-for-engineers

./: README.md  renovate.json
scripts/chapter2/: .env.example  .gitignore  2-1-1-tiktoken.py  2-2-1-token-comparison.py  2-2-3_improved_system_prompt.py  README.md  call-llm.py  pyproject.toml  run-all.py
scripts/chapter2/outputs/: 2-1-1-out.txt  2-1-2-high-out.txt  2-1-2-out.txt  2-1-2-story-high-out.txt  2-1-2-story-out.txt  2-2-1-bad-out.txt  2-2-1-out.txt  2-2-2-bad-out.txt  2-2-2-code-bad-out.txt  2-2-2-good-out.txt  2-2-2-out.txt  2-2-3-no-system-out.txt  2-2-3-nosystem-out.txt  2-2-3-out.txt  2-3-1-fewshot-out.txt  2-3-1-no-fewshot-out.txt  2-3-1-noshot-out.txt  2-3-1-out.txt  2-3-2-edge-out.txt  2-3-2-noedge-out.txt  2-3-2-out.txt  2-4-1-out.txt  2-4-2-out.txt  2-5-1-out.txt  2-5-consistency-out.txt  2-6-1-ltm-out.txt  2-6-1-out.txt  2-6-2-out.txt  2-6-3-out.txt
scripts/chapter2/prompts/: 2-1-2-high-prompt.txt  2-1-2-prompt.txt  2-1-2-story-high-prompt.txt  2-1-2-story-prompt.txt  2-2-1-bad-prompt.txt  2-2-1-prompt.txt  2-2-2-bad-prompt.txt  2-2-2-code-bad-prompt.txt  2-2-2-good-prompt.txt  2-2-2-prompt.txt  2-2-3-no-system-prompt.txt  (+20 more)
scripts/chapter4/: .gitignore  4-3-2_prompt_template.py  4-3-2_prompt_template_api.py  4-3-2_prompt_template_multiple.py  4-3-3_json_output_parser.py  4-3-3_pydantic_output_parser.py  4-3-3_str_output_parser.py  4-3-4_chain.py  4-3-4_chain_api.py  4-3-4_chain_multiple.py  4-3-5_memory.py  4-3-6_tool.py  4-3-6_tool_api.py  4-4-1_chatbot_basic.py  4-4-2_chatbot_faq.py  4-6-1_add_conditional_edges.ipynb  4-6-2_fan_out_fan_in_and_loop.ipynb  4-6-3_human_in_the_loop.ipynb  README.md  pyproject.toml
scripts/chapter5/: .env.example  .gitignore  5-2-1-rag-comparison-demo.py  5-3-1-search-comparison.py  5-3-3-simple-hybrid-search.py  5-4-1-minimal-rag-chroma.py  5-5-1-hybrid-search-rrf.py  5-6-2-complete-rag-pipeline.py  README.md  explain_rrf.py  faiss_langchain_demo.py  generate_bm25_formula.py  generate_cosine_formula.py  generate_rrf_formula.py  pyproject.toml  test_imports.py
scripts/chapter7/: .env.example  .gitignore  7-3-1_stop_verification.py  7-3_react_search.py  7-4_langgraph_search.py  7-4_react_search.py  7-5_langgraph_search.py  7-5_rag_agent.py  7-5_research_agent.py.old  7-6_rag_agent.py  README.md  pyproject.toml  run_all.py  test_graph_viz.py
(+66 files in other folders)
